syntax = "proto3";

package common;

message ReqByID {
  string id = 1;
}
